--- a/app/views/toys/brainhurter.html.erb
+++ b/app/views/toys/brainhurter.html.erb
@@ -1,6 +1,6 @@
 <h2>Roll-your-own Brainhurt Pairing Generator</h2>
 
-<% form_tag "/brainhurter", :method => :post do %>
+<% form_tag "/toys/brainhurter", :method => :post do %>
   <%= label_tag "level_normal", "Use your written characters" %>
   <%= radio_button_tag "level", "normal", params[:level] == "normal" %>
   <%= label_tag "level_kamikaze", "Use all the characters in your written fandoms" %>
