--- a/app/views/toys/brainhurter.html.erb
+++ b/app/views/toys/brainhurter.html.erb
@@ -2,7 +2,7 @@
 
 <% form_tag "/toys/brainhurter", :method => :post do %>
   <%= label_tag "level_normal", "Use your written characters" %>
-  <%= radio_button_tag "level", "normal", params[:level] == "normal" %>
+  <%= radio_button_tag "level", "normal", params[:level] == "normal" || params[:level].blank? %>
   <br />
   <%= label_tag "level_kamikaze", "Use all the characters in your written fandoms" %>
   <%= radio_button_tag "level", "kamikaze", params[:level] == "kamikaze" %>
