--- a/app/views/inbox/show.html.erb
+++ b/app/views/inbox/show.html.erb
@@ -1,21 +1,21 @@
 <!--Descriptive page name, messages and instructions-->
-<h2><%=h t('.my_inbox', :default => 'My Inbox') %> (<%= t('.inbox_count', :default => "%{total} comments, %{unread} unread", :total => @inbox_total, :unread => @unread) %>)</h2>
+<h2><%=h t('.my_inbox', :default => 'My Inbox') %> (<%= t('.inbox_count', :default => "%{total} messages, %{unread} unread", :total => @inbox_total, :unread => @unread) %>)</h2>
 
 <%= flash_div :comment_error, :comment_notice %>
 <!--/descriptions-->
 
 <!--main content-->
-<% unless @inbox_comments.blank? %>  
+<% unless @inbox_messages.blank? %>  
   <%= form_tag user_inbox_path(@user), :method => :put, :id => 'inbox-form' do %>
   <fieldset>
 	<legend>Mass Edit Options</legend>
 	<ul class="navigation">
     <li>Select: </li>
     <li>
-      <a onclick="$('inbox-form').getInputs('checkbox', 'inbox_comments[]').each(function(box){box.checked = 1})">all</a>
+      <a onclick="$('inbox-form').getInputs('checkbox', 'inbox_messages[]').each(function(box){box.checked = 1})">all</a>
     </li>
     <li>
-      <a onclick="$('inbox-form').getInputs('checkbox', 'inbox_comments[]').each(function(box){box.checked = 0})">none</a>
+      <a onclick="$('inbox-form').getInputs('checkbox', 'inbox_messages[]').each(function(box){box.checked = 0})">none</a>
     </li>
   </ul>
 	<p class="submit">
@@ -26,34 +26,34 @@
   </p>
 	</fieldset>
 	<fieldset>
-	<legend>List of Comments</legend>
+	<legend>List of Notifications</legend>
 	<ol class="comment index">
-    <% for inbox_comment in @inbox_comments %>
+    <% for inbox_message in @inbox_messages %>
       <!-- START of single comment -->
-      <li class="comment <%= inbox_comment.read? ? 'read' : 'unread' %> <%= cycle :odd, :even %>" role="article">
-        <h4><%= get_commenter_pseud_or_name(inbox_comment.feedback_comment) %> <%= 'to' %> <%= commentable_description_link(inbox_comment.feedback_comment) %> </h4>
+      <li class="comment <%= inbox_message.read? ? 'read' : 'unread' %> <%= cycle :odd, :even %>" role="article">
+        <h4><%= get_commenter_pseud_or_name(inbox_message.messageable) %> <%= 'to' %> <%= commentable_description_link(inbox_message.messageable) %> </h4>
         <div class="icon">
-          <% if !inbox_comment.feedback_comment.pseud.nil? %>
-            <%= standard_icon_display(inbox_comment.feedback_comment.pseud.user, inbox_comment.feedback_comment.pseud) %>
+          <% if !inbox_message.messageable.pseud.nil? %>
+            <%= standard_icon_display(inbox_message.messageable.pseud.user, inbox_message.messageable.pseud) %>
           <% else %>
             <span class="visitor icon"><!-- visitor icon holder --></span>
           <% end %>
         </div>
-        <blockquote class="userstuff"><%=raw sanitize_field(inbox_comment.feedback_comment, :content) %></blockquote>
-        <p class="datetime"><%= distance_of_time_in_words_to_now(inbox_comment.created_at) %></p>
+        <blockquote class="userstuff"><%=raw sanitize_field(inbox_message.messageable, :content) %></blockquote>
+        <p class="datetime"><%= distance_of_time_in_words_to_now(inbox_message.created_at) %></p>
         <h5 class="landmark">Comment Actions</h5>
         <ul class="navigation">
-          <% unless inbox_comment.read? %>
+          <% unless inbox_message.read? %>
             <li><span class="unread">Unread</span></li>
           <% end %>
           <li>
-            <%= image_tag("replied_to.png", :size => "15x15", :alt => "Replied To") if inbox_comment.replied_to? %>
+            <%= image_tag("replied_to.png", :size => "15x15", :alt => "Replied To") if inbox_message.replied_to? %>
             <%= link_to "Reply", reply_user_inbox_path(current_user, :comment_id => 
-inbox_comment.feedback_comment), :remote => true %>
+inbox_message.messageable), :remote => true %>
           </li>
           <li>
-            <%= label_tag "inbox_comments_#{inbox_comment.id}", "Select" %>
-            <%= check_box_tag "inbox_comments[]", inbox_comment.id, false, :title => "select this comment", :id => "inbox_comments_#{inbox_comment.id}" %>
+            <%= label_tag "inbox_messages_#{inbox_message.id}", "Select" %>
+            <%= check_box_tag "inbox_messages[]", inbox_message.id, false, :title => "select this comment", :id => "inbox_messages_#{inbox_message.id}" %>
           </li>
         </ul>
       </li>
@@ -66,10 +66,10 @@ inbox_comment.feedback_comment), :remote => true %>
 	<ul class="navigation">
     <li>Select: </li>
     <li>
-      <a onclick="$('inbox-form').getInputs('checkbox', 'inbox_comments[]').each(function(box){box.checked = 1})">all</a>
+      <a onclick="$('inbox-form').getInputs('checkbox', 'inbox_messages[]').each(function(box){box.checked = 1})">all</a>
     </li>
     <li>
-      <a onclick="$('inbox-form').getInputs('checkbox', 'inbox_comments[]').each(function(box){box.checked = 0})">none</a>
+      <a onclick="$('inbox-form').getInputs('checkbox', 'inbox_messages[]').each(function(box){box.checked = 0})">none</a>
     </li>
   </ul>
     <p class="submit">
